finished number assignment

--- a/styles/js.css
+++ b/styles/js.css
@@ -2,70 +2,6 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #020636;
-}
-
-body div:nth-child(2) {
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-height: 18vh;
-}
-
-body div:nth-child(2) button {
-  width: 20vw;
-  height: 8vh;
-  font-size: 19px;
-  border: 1px solid #d65123;
-  border-radius: 12px;
-  background: #d65123;
-}
-
-body div:nth-child(2) button:hover {
-  color: #020636 !important;
-  background-color: #f18c6a;
-}
-
-ul {
-  list-style: none !important;
-}
-
-ul li {
-  color: aliceblue;
-}
-
-table {
-  font-size: 30px;
-  color: #ffff;
-  border: 1px solid;
-  width: 23%;
-  min-height: 25%;
-  margin: 0 auto;
-}
-
-table tr {
-  gap: 8vw;
-  border-bottom: 1px solid;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 114%;
-}
-
-.button2 {
-  width: 20vw;
-  height: 8vh;
-  font-size: 19px;
-  border: 1px solid #d65123;
-  border-radius: 12px;
-  background: #d65123;
-}
-
-.button2:hover {
-  color: #020636 !important;
-  background-color: #f18c6a;
+  color: white;
 }
 /*# sourceMappingURL=js.css.map */
